--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "author": "Promise Uka",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.1"
+    "mongoose": "^7.0.1",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
